tests/invalids/invalidIf4-1.gt
proc main ()
    int m;
begin
    if m < n then
        m < n;
    fi
end
